# spaaace

./: .gitignore  CMakeLists.txt  README.md  space.cpp
src/: CMakeLists.txt  Star.cpp  Star.h  space.cpp
